# GeekFanatic

./: .clinerules  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RooCodeContextLog.md  fix_svg.py  pyproject.toml  temp_activity_bar.py  test_icon.py  test_icons.py
docs/: architecture.md  development.md  development_plan.md  example_editor_plugin.md
src/geek_fanatic/: __init__.py  __main__.py
src/geek_fanatic/core/: __init__.py  app.py  command.py  config.py  layout.py  plugin.py  theme.py  view.py  window.py
src/geek_fanatic/core/widgets/: activity_bar.py  side_bar.py  work_area.py
src/geek_fanatic/plugins/: __init__.py
src/geek_fanatic/plugins/editor/: README.md  __init__.py  buffer.py  editor.py  file_explorer.py  setup.py  types.py
src/geek_fanatic/plugins/editor/commands/: __init__.py  basic.py  search.py
src/geek_fanatic/plugins/editor/features/: __init__.py  folding.py  highlight.py  indent.py
src/geek_fanatic/plugins/editor/ui/: ActivityBar.qml  EditorArea.qml  Panel.qml  SideBar.qml  StatusBar.qml  __init__.py  editor.qml
src/geek_fanatic/plugins/editor/ui/widgets/: __init__.py  editor.py
src/geek_fanatic/resources/: icons.py  icons.qrc  resources.qrc  resources_rc.py
src/geek_fanatic/ui/: Editor.qml  __init__.py  main.qml  main_window.py
src/geek_fanatic/ui/resources/: __init__.py
src/geek_fanatic/ui/resources/styles/: default.qss
src/geek_fanatic/ui/widgets/: __init__.py  dialogs.py  main_window.py
tests/: test_app.py  test_editor.py  test_main_window.py
