[tool.poetry]
name = "geek-fanatic"
version = "0.1.0"
description = "一个模仿 VSCode 界面布局与核心架构的现代化桌面应用程序"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "geek_fanatic", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PySide6 = {version = "6.5.3", extras = ["qml", "quick", "network", "webengine"]}
watchdog = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-qt = "^4.3.1"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.messages_control]
disable = ["C0111"]

[tool.pylint.format]
max-line-length = 88
